# Life-Game

./: CMakeLists.txt
include/: game.h  global.h  menu.h  pattern.h  window.h
src/: CMakeLists.txt  game.c  main.c  menu.c  pattern.c  window.c
